# TIJK-Bot

./: .bandit  .bandit.yml  .dockerignore  .env  .env.example  .flake8  .gitignore  .mypy  .pep8  .pylintrc  8ball_responses.json  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  README.md  assistant_model.h5  assistant_model_words.pkl  basic_logger.py  bot_prefixes.json  deploy.sh  intents.json  keep_alive.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  sonar-project.properties  spam_detect.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  error.yaml  feature_request.md  feature_request.yaml  new_command.md  question.md  question.yaml
.github/workflows/: auto-restart.yml  caching.yml  codacy.yml  codeql-analysis.yml  codeql.yml  issue-auto-close.yml  lint.yml  prettier.yml  qodana.yml  super-linter.yml
cogs/: admin.py  ai_chat.py  api.py  convert.py  developer.py  error_handler.py  event_handler.py  fun.py  general.py  role_view.py
context/: admin.py  general.py
slash/: admin.py  api.py  custom_checks.py  developer.py  developer_slash.py  fun.py  general.py
templates/: index.html
utils/: check_message_sender.py  database.py
views/: Clash_ping.py  SMP_ping.py  button_roles.py  github.py  github_button.py  hypixel_ping.py  profile_picture.py  report_issue.py  verify.py
views/buttons/: button_roles.py  change_name_back.py  database_check.py  link.py  pingpoll.py  pings.py
views/context_menus/: admin.py  admin_context.py
(+5 files in other folders)
